hphp/test/zend7/Zend/tests/bug33318.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug33318.php on line 2